# synthetic-mouse

./: .clang-format  .gitignore  AGENTS.md  Makefile  README.md  compile_flags.txt  main.c  meson.build  meson_options.txt  parse_config.c  synthetic-mouse.h  synthetic.conf  synthetic_controller.conf  synthetic_keyboard.conf
packaging/openrc/: synthetic-mouse.initd.in
packaging/systemd/: synthetic-mouse.service.in
src/: main.c  parse_config.c  synthetic-mouse.h
